# redevplugin

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  deny.toml  eslint.config.js  go.mod  go.sum  package-lock.json  package.json
.githooks/: pre-push
.github/workflows/: ci.yml  recover-release.yml  release.yml  stress.yml
cmd/redevplugin/: dev_lifecycle.go  examples_server.go  examples_server_test.go  host_capability.go  main.go  main_test.go  platform_adapters.go  real_demo.go  real_demo_test.go  runtime_manager.go  session_lifecycle.go  session_lifecycle_test.go
crates/redevplugin-contracts/: Cargo.toml  README.md
crates/redevplugin-contracts/src/: contracts_gen.rs  lib.rs  release_signing.rs
crates/redevplugin-contracts/tests/: contracts.rs  ledger_evidence.rs  release_signing.rs
crates/redevplugin-contracts/tests/fixtures/: release-signing-ledger-wire-v1.json  release-signing-v1.json
crates/redevplugin-ipc/: Cargo.toml  README.md
crates/redevplugin-ipc/src/: contract_set_gen.rs  lib.rs
crates/redevplugin-ipc/testdata/: runtime-lease-signature-v1-invocation.json
crates/redevplugin-ipc/testdata/ipc/: missing_required.json  replay_frame.json  runtime_generation_mismatch.json  unknown_enum.json  valid_hello_ack.json
crates/redevplugin-ipc/tests/: session_revoke.rs
crates/redevplugin-runtime/: Cargo.toml  README.md
crates/redevplugin-runtime/src/: main.rs  module_cache.rs  performance_evidence.rs  process_containment.rs  scheduler.rs
crates/redevplugin-runtime/testdata/: memos.wasm
crates/redevplugin-target-classifier/: Cargo.toml  README.md
crates/redevplugin-target-classifier/src/: lib.rs
crates/redevplugin-target-classifier/tests/: property_gates.rs
crates/redevplugin-wasm-abi/: Cargo.toml  LICENSE  README.md
crates/redevplugin-wasm-abi/src/: lib.rs
crates/redevplugin-wasm-abi/testdata/wasm/: invalid-final-opcode.hex  table-maximum-exceeds-limit.hex
crates/redevplugin-worker-sdk/: Cargo.toml  README.md
crates/redevplugin-worker-sdk/src/: hostcalls.rs  lib.rs
demo/browser/: browser-contract.test.mjs  browser-smoke.mjs  demo-platform.mjs  demo-platform.test.mjs  generated-demo.mjs  host.mjs  index.html  opaque-plugin-worker.ts  plugin.html  plugin.mjs  real-demo.mjs  real-plugin-worker.ts  real-runtime-smoke.mjs  scaffold-plugin-worker.ts  server.mjs  smoke-console-policy.mjs  styles.css  worker-security-probe.ts
docs/architecture/: plugin-platform-runtime.md
docs/release/: a2-tdd-evidence.md  a3-tdd-evidence.md  ci-and-release-gates.md
docs/security/: plugin-platform-security.md
docs/ui/: plugin-surface-sdk.md
examples/: examples_test.go  memos_product_test.go  tsconfig.json
examples/host-capability/: documents.build.example.json  documents.contract.json  documents.notices.json  tsconfig.json
examples/plugin-ui/: memos-markdown.ts  memos.ts  sky-strike.ts  weather.ts
examples/plugins/: worker-artifacts.lock.json
examples/showcase/: app.js  app.ts  index.html  styles.css
examples/workers/sky-strike/: Cargo.toml
examples/workers/sky-strike/src/: lib.rs
examples/workers/weather/: Cargo.toml
examples/workers/weather/src/: lib.rs
internal/browserharness/: a2-evidence-contract.test.mjs  examples-page-failures.mjs  examples-page-failures.test.mjs  examples-server-smoke.mjs  opaque-surface-contract.test.mjs  opaque-surface-server.mjs  opaque-surface-smoke.mjs
internal/contracts/: active-contracts.json
internal/executionbinding/: clone.go  clone_test.go
internal/jsonvalue/: jsonvalue.go  jsonvalue_test.go  structplan.go
internal/performanceevidence/: measurement.go  measurement_test.go  route_authorization.go
internal/runtimeclient/: admission.go  descriptor.go  descriptor_test.go  fuzz_test.go  lease_replay.go  lease_replay_sqlite.go  lease_replay_test.go  manager.go  manager_test.go  runtime_artifact_other.go  runtime_artifact_unix.go  runtime_artifact_unix_test.go  runtime_executable_fd_linux.go  runtime_process.go  runtime_process_containment_linux_test.go  runtime_process_exit_unix_test.go  runtime_process_linux.go  runtime_process_other.go  runtime_process_trampoline_linux_amd64.s  runtime_process_trampoline_linux_arm64.s  runtime_test_helpers_test.go  runtimeclient.go  runtimeclient_test.go
internal/scaffoldtemplate/: plugin-worker.ts  tsconfig.json
internal/scaffoldworker/: Cargo.toml
pkg/bridge/: bridge.go  bridge_test.go  session_scope_revoke_test.go  surface.go  surface_test.go
pkg/browsersite/: browsersite.go  browsersite_test.go  sqlite.go
pkg/capability/: capability.go  capability_test.go  fuzz_test.go  redaction.go  redaction_test.go  risk.go  risk_test.go
pkg/capabilitycontract/: artifact.go  (+6 more)
scripts/: archive_contract.mjs  assert_github_release_absent.sh  build_browser_harness.mjs  build_demo_workers.mjs  build_example_plugins.mjs  build_redevplugin_contracts_package.mjs  build_redevplugin_release.sh  build_redevplugin_ui_package.mjs  build_redevplugin_worker_sdk_package.mjs  build_scaffold_assets.mjs  canonical_wasm_builder.mjs  canonical_wasm_builder.test.mjs  check_redevplugin_performance.sh  check_redevplugin_platform.sh  check_redevplugin_pre_push.sh  check_redevplugin_property_gates.sh  check_redevplugin_release_audit.sh  check_redevplugin_release_metadata.mjs  check_redevplugin_runtime_contract.sh  check_redevplugin_stress.sh  check_redevplugin_ui_bridge.sh  copy_redevplugin_performance_evidence.mjs  cross_language_contracts.test.mjs  generate_contract_registry.mjs  generate_error_codes.mjs  generate_openapi_types.mjs  generate_owner_scope_inventories.mjs  generate_platform_package_contracts.mjs  generate_redevplugin_performance_evidence.mjs  generate_third_party_notices.mjs  link_redevplugin_runtime_static_pie.sh  measure_http_route_authorization_performance.mjs  measure_http_route_authorization_performance.test.mjs  measure_redevplugin_renderer_performance.mjs  measure_redevplugin_ui_performance.mjs  memos_markdown_identity.test.mjs  openapi_contract_integrity.test.mjs  owner_scope_inventory.test.mjs  performance_contract.mjs  performance_contract.test.mjs  (+35 more)
(+519 files in other folders)
