[workspace]
resolver = "2"
members = [
  "crates/redevplugin-contracts",
  "crates/redevplugin-runtime",
  "crates/redevplugin-ipc",
  "crates/redevplugin-worker-sdk",
  "crates/redevplugin-wasm-abi",
  "crates/redevplugin-target-classifier",
  "internal/scaffoldworker",
  "examples/workers/memos",
  "examples/workers/weather",
  "examples/workers/sky-strike",
]

[workspace.package]
version = "0.6.1"
edition = "2024"
license = "MIT"
repository = "https://github.com/floegence/redevplugin"
rust-version = "1.88.0"
