[package]
name = "redevplugin-contracts"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Embedded machine contracts for the ReDevPlugin platform"
repository.workspace = true
rust-version.workspace = true
readme = "README.md"
include = ["Cargo.toml", "LICENSE", "README.md", "src/**", "tests/**"]

[lib]
path = "src/lib.rs"

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
