[package]
name = "redevplugin-ipc"
version = "0.0.0-dev"
edition = "2024"
license = "MIT"

[dependencies]
base64 = "0.22"
ed25519-dalek = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
sha2 = "0.10"
time = { version = "0.3", features = ["parsing"] }

[dev-dependencies]
