[package]
name = "redevplugin-ipc"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Closed IPC protocol types for the ReDevPlugin runtime"
repository.workspace = true
rust-version.workspace = true
readme = "README.md"
include = ["Cargo.toml", "LICENSE", "README.md", "src/**", "tests/**", "testdata/**"]

[dependencies]
base64 = "0.22"
ed25519-dalek = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
sha2 = "0.10"

[dev-dependencies]
proptest = "1.6"
redevplugin-contracts = { path = "../redevplugin-contracts", version = "=0.6.14" }
