[package]
name = "redevplugin-runtime"
version = "0.0.0-dev"
edition = "2024"
license = "MIT"

[dependencies]
redevplugin-ipc = { path = "../redevplugin-ipc" }
redevplugin-wasm-abi = { path = "../redevplugin-wasm-abi" }
wasmi = { version = "2.0.0-beta.3", default-features = false, features = ["std", "validate"] }
