[package]
name = "redevplugin-runtime"
version = "0.0.0-dev"
edition = "2024"
license = "MIT"

[dependencies]
redevplugin-ipc = { path = "../redevplugin-ipc" }
redevplugin-wasm-abi = { path = "../redevplugin-wasm-abi" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasmi = { version = "2.0.0-beta.7", default-features = false, features = ["portable-dispatch", "std", "validate"] }

[dev-dependencies]
wat = "1"
