[package]
name = "redevplugin-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Sandboxed WASM execution runtime for the ReDevPlugin platform"
repository.workspace = true
rust-version.workspace = true
readme = "README.md"
include = ["Cargo.toml", "LICENSE", "README.md", "src/**", "testdata/**"]

[dependencies]
libc = "0.2"
redevplugin-ipc = { path = "../redevplugin-ipc", version = "=0.6.12" }
redevplugin-wasm-abi = { path = "../redevplugin-wasm-abi", version = "=0.6.12" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasmi = { version = "2.0.0-beta.7", default-features = false, features = ["portable-dispatch", "std", "validate"] }

[dev-dependencies]
proptest = "1.6"
wat = "1"
