[package]
name = "redevplugin-wasm-abi"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "WASM worker ABI validation for the ReDevPlugin runtime"
repository.workspace = true
rust-version.workspace = true
readme = "README.md"
include = ["Cargo.toml", "LICENSE", "README.md", "src/**", "testdata/**"]

[dependencies]
wasmparser = "0.228"

[dev-dependencies]
wat = "1"
