[package]
name = "redevplugin-worker-sdk"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Rust SDK for ReDevPlugin WASM workers"
repository.workspace = true
rust-version.workspace = true
readme = "README.md"
include = ["Cargo.toml", "LICENSE", "README.md", "src/**"]
keywords = ["plugin", "wasm", "sandbox"]
categories = ["api-bindings", "wasm"]

[dependencies]
base64 = "0.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
