[package]
name = "redevplugin-example-weather-worker"
version = "0.1.0"
edition = "2024"
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
redevplugin-worker-sdk = { path = "../../../crates/redevplugin-worker-sdk" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
